--- a/26-09.html
+++ b/26-09.html
@@ -16,7 +16,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Checking IMage </h1>
+    <h1>Checking IMage</h1>
     <h2>Demostrating the box model</h2>
     <p>
         THe CSS Box model is essentially used to give styling to the text
@@ -29,6 +29,6 @@
         werfkhajklsfhqliwehfqilewjhfu <br>
         sdjnakjsdnhvca.msnxvcakjlsdhnvcamn c<br>
         <br>
-    </div>
+    </div>Regular functions are defined using the def keyword. Similarly, anonymous functions are defined by using the lambda keyword.
     </body>
 </html>    
