registration form code

--- a/activity6.html
+++ b/activity6.html
@@ -2,15 +2,84 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=(), initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="activity6.css">
 </head>
 <body>
     <div class="container">
         <form action="#" method="POST" enctype="multipart/form-data">
-            
+            <div class="heading">REGISTRATION FORM</div>
+            <div class="namedetail">
+                <div class="inputbox">
+                    <label for="username">Username:</label>
+                    <input type="text" id="username" minlength="8" maxlength="15" placeholder="Enter your Name">
+                </div>
+                <br>
+                <div class="inputbox">
+                    <label for="password">Password:</label>
+                    <input type="password" id="password">
+                </div>
+                <br>
+                <div class="inputbox">
+                    <label for="e-mail">E-Mail:</label>
+                    <input type="e-mail" id="e-mail">
+                </div>
+                <br>
+                <div class="inputbox">
+                    <label for="phonenum">Phone Num:</label>
+                    <input type="phonenum" id="phonenum" placeholder="12-3456-7890">
+                </div>
+                <br>
+                <div class="inputbox">
+                    <label for="quantity">No. of attempts taken:</label>
+                    <input type="quantity" id="quantity" min="1" max="9" value="0">
+                </div>
+                <br>
+                <div class="inputbox">
+                    <label for="dated">Date on which form has been applied:</label>
+                    <input type="date" id="dated">
+                </div>
+                <br>
+                <div class="title">
+                    <label for="gender">Title:</label>
+                    <label for="mr.">Mr.<label>
+                    <input type="radio" name="gender">
+                    <label for="ms.">Ms.</label>
+                    <input type="radio" name="gender">
+                    <label for="mrs.">Mrs.</label>
+                    <input type="radio" name="gender">    
+                </div>
+                <br>
+                <div>
+                    <label for="files">Upload files</label>
+                    <input type="file" id="files" accept="images/png, images/jpeg">
+
+                </div>
+                <br>
+                <div>
+                    <label for="check">All files have been uploaded</label>
+                    <input type="checkbox" id="check">
+                </div>
+                <br>
+                <div>
+                    <label for="payments">Payments:</label>
+                    <select name="" id="">
+                        <option value="rs">Rs.</option>
+                        <option value="dollar">$</option>
+                    </select>
+                </div>
+                <br>
+                <div class="inputbox">
+                    <label for="comment">Any Comments:</label>
+                    <textarea name="textarea" id="comment" rows="4" col="45px"></textarea>
+                </div>
+                <br>
+                <div class="button">
+                    <input type="submit" id="buttons">
+                </div>
+            </div>
         </form>
     </div>
-    
 </body>
 </html>
